--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <hr>
         <div class="text-center bg-secondary mt-3 vh-25 resume"><h1>自傳</h1></div>
         <h5 class="me-3 ms-3 fs-5 text-center resume">
-                 您好，我是朱敏雄
+            您好，我是朱敏雄
             <p>自小就對電腦資訊有濃厚的興趣，在成長的路上幾經波折<br>
             而中斷了相關學習，同時也因緣際會進入過運動服務業的領域<br>
             如今透過職訓的跨平台頁設計與應用的課程，<br>
@@ -183,8 +183,8 @@
                             <input type="checkbox" id="touch"> 
                             <ul class="slide m-0 p-0">
                                 <li><a href="https://han830301.github.io/projects3/index.html" target="_blank" class="h5 text-dark fw-700">夏威夷旅遊租賃(虛構)</a></li> 
-                                <li><a href="#" target="_blank" class="h5 text-dark fw-700">一頁式行銷網頁(虛構)</a></li>
-                                <li><a href="#" target="_blank" class="h5 text-dark fw-700">小動畫</a></li>
+                                <li><a href="https://han830301.github.io/project5/" target="_blank" class="h5 text-dark fw-700">一頁式行銷網頁(虛構)</a></li>
+                                <li><a href="https://han830301.github.io/earth/" target="_blank" class="h5 text-dark fw-700">太陽系公轉平面小動畫</a></li>
                                 <li><a href="#" target="_blank" class="h5 text-dark fw-700">專題</a></li>
                             </ul>
                         </div>   
