--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             您好，我是朱敏雄
             <p>自小就對電腦資訊有濃厚的興趣，在成長的路上幾經波折<br>
             而中斷了相關學習，同時也因緣際會進入過運動服務業的領域<br>
-            如今透過職訓的跨平台頁設計與應用的課程，<br>
+            如今透過職訓的跨平台網站設置與應用的課程，<br>
             再次投入資訊相關的學習，希望可以投身進入資訊<br>
             相關產業成為一名優秀前端工程師或網頁設計師。
             </p>
