--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <li><a href="https://han830301.github.io/projects3/index.html" target="_blank" class="h5 text-dark fw-700">夏威夷旅遊租賃(虛構)</a></li> 
                                 <li><a href="https://han830301.github.io/project5/" target="_blank" class="h5 text-dark fw-700">一頁式行銷網頁(虛構)</a></li>
                                 <li><a href="https://han830301.github.io/earth/" target="_blank" class="h5 text-dark fw-700">太陽系公轉平面小動畫</a></li>
-                                <li><a href="#" target="_blank" class="h5 text-dark fw-700">專題</a></li>
+                                <li><a href="https://han830301.github.io/projects/" target="_blank" class="h5 text-dark fw-700">自製專題</a></li>
                             </ul>
                         </div>   
                     </div>
