--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <h5>2009/09~2012/06</h5>
                         <h5>嶺東高中進修部-資料處理科</h5>
                         <h5>2023/01~2023/07</h5>
-                        <h5>勞動部動力發展署 - <br>跨平台網頁設計與應用班(第一期)</h5>
+                        <h5>勞動部動力發展署 - <br>跨平台網站設置與應用班(第一期)</h5>
                     </div>
                 </div>
                 <div class="col-md-4 offset-1 order-sm-3 order-md-4">
