--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="text01">
                         <div class="fs-3">工作經歷</div>
                         <h5>2016/10~2023/01</h5>
-                        <p class="fw-700">愛克有限公司-運動服務業<br>(自行車銷售及保養)</p>
+                        <h5>愛克有限公司 - 狂人單車店<br>(自行車銷售及保養)</h5>
                     </div>
                 </div>
                 <div class="col-md-4 offset-1">
